# nexum

./: .dockerignore  .gitignore  Dockerfile  MODULAR_API_DEMO.md  PRODUCTION_HARDENING.md  PRODUCTION_HARDENING_SUMMARY.md  README.md  REVIEW.md  calculate_expected_balance.py  core_banking.db  core_banking.db-shm  core_banking.db-wal  debug_compound_interest.py  debug_interest.py  debug_interest_posting.py  debug_loan_state.py  debug_minimum_balance.py  debug_reversal.py  docker-compose.yml  production_hardening_test.py  pyproject.toml  run.py  shared_clients.py  test_auth.py
.github/workflows/: ci.yml
core_banking/: __init__.py  accounts.py  api.py  api_old.py  async_storage.py  audit.py  collections.py  compliance.py  config.py  credit.py  currency.py  custom_fields.py  customers.py  encryption.py  event_hooks.py  events.py  fraud_client.py  fraud_events.py  interest.py  kafka_integration.py  ledger.py  loans.py  logging_config.py  migrations.py  notifications.py  products.py  rbac.py  reporting.py  storage.py  tenancy.py  transactions.py  workflows.py
core_banking/api_modular/: __init__.py  accounts.py  admin.py  auth.py  collections.py  credit.py  custom_fields.py  customers.py  kafka.py  loans.py  products.py  rbac.py  reporting.py  schemas.py  transactions.py  workflows.py
dashboard/: __init__.py  __main__.py  app.py  seed.py
dashboard/static/: app.js  index.html  style.css
docs/: BEST_PRACTICES.md  COOKBOOK.md  DEPLOYMENT.md  GETTING_STARTED.md  KAFKA_INTEGRATION.md  SECURITY.md  api-reference.md  architecture.md  getting-started.md
docs/modules/: collections.md  compliance.md  credit.md  custom-fields.md  encryption.md  events.md  kafka.md  ledger.md  loans.md  notifications.md  products.md  rbac.md  reporting.md  tenancy.md  workflows.md
examples/: postgresql_usage.py
tests/: __init__.py  test_accounts.py  test_api_integration.py  test_async_storage.py  test_audit.py  test_collections.py  test_compliance.py  test_credit.py  test_currency.py  test_custom_fields.py  test_encryption.py  test_events.py  test_fraud_client.py  test_fraud_events.py  test_integration.py  test_interest.py  test_kafka.py  test_ledger.py  test_loans.py  test_notifications.py  test_products.py  test_rbac.py  test_reporting.py  test_storage.py  test_tenancy.py  test_transactions.py  test_workflows.py
