[tool.poetry]
name = "nexum"
version = "1.0.0"
description = "Nexum — Production-grade core banking system with double-entry ledger, configurable products, loans, credit lines, collections, compliance, workflows, RBAC, reporting, and Kafka integration."
authors = ["Gradient Mind <thet800@proton.me>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/AlexShrike/nexum"
repository = "https://github.com/AlexShrike/nexum"
keywords = ["banking", "core-banking", "fintech", "ledger", "double-entry", "fraud-detection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
]
packages = [{include = "core_banking"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = ">=0.100.0"
uvicorn = ">=0.20.0"
pydantic = ">=2.0.0"
PyJWT = ">=2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
httpx = ">=0.24.0"

[tool.poetry.group.postgres.dependencies]
psycopg2-binary = {version = ">=2.9.0", optional = true}
asyncpg = {version = ">=0.28.0", optional = true}

[tool.poetry.group.kafka.dependencies]
confluent-kafka = {version = ">=2.0.0", optional = true}

[tool.poetry.extras]
postgres = ["psycopg2-binary", "asyncpg"]
kafka = ["confluent-kafka"]
all = ["psycopg2-binary", "asyncpg", "confluent-kafka"]

[tool.poetry.scripts]
nexum = "core_banking.api:run_server"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
