[project]
name = "nexum"
version = "1.0.0"
description = "Nexum — Production-grade core banking system with double-entry ledger, configurable products, loans, credit lines, collections, compliance, workflows, RBAC, reporting, and Kafka integration."
authors = [{name = "AlexShrike", email = "thet800@proton.me"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<4.0"
keywords = ["banking", "core-banking", "fintech", "ledger", "double-entry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "PyJWT>=2.0.0",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9.0", "asyncpg>=0.28.0"]
kafka = ["confluent-kafka>=2.0.0"]
encryption = ["cryptography>=3.4.0"]
all = ["psycopg2-binary>=2.9.0", "asyncpg>=0.28.0", "confluent-kafka>=2.0.0", "cryptography>=3.4.0"]

[project.scripts]
nexum = "core_banking.api:run_server"

[project.urls]
Homepage = "https://github.com/AlexShrike/nexum"
Repository = "https://github.com/AlexShrike/nexum"

[tool.poetry]
packages = [{include = "core_banking"}]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
httpx = ">=0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
